--- a/lab2/WeatherDataFull/WeatherDataFull.vcxproj
+++ b/lab2/WeatherDataFull/WeatherDataFull.vcxproj
@@ -139,7 +139,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Dependents\Dependents.hpp" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="WeatherData\Displays\Display.h" />
+    <ClInclude Include="WeatherData\WeatherData.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -148,6 +151,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="WeatherData\Displays\Display.cpp" />
+    <ClCompile Include="WeatherData\WeatherData.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
