--- a/lab2/WeatherStationDuoMetaTests/WeatherStationDuoMetaTests.vcxproj.filters
+++ b/lab2/WeatherStationDuoMetaTests/WeatherStationDuoMetaTests.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="WeatherStationDuoTests.cpp">
+    <ClCompile Include="WeatherStationDuoMetaTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LocationTestDisplay.cpp">
@@ -32,8 +32,5 @@
     <ClInclude Include="MockDisplay.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="cpp.hint" />
   </ItemGroup>
 </Project>
