--- a/lab2/WeatherStationDuoPtrTests/WeatherStationDuoPtrTests.vcxproj
+++ b/lab2/WeatherStationDuoPtrTests/WeatherStationDuoPtrTests.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{41e7d6af-7dbd-404d-945a-6034b8769607}</ProjectGuid>
-    <RootNamespace>WeatherStationDuoTests</RootNamespace>
+    <ProjectGuid>{77dc4c2f-dc83-4435-b127-1162d23cbee9}</ProjectGuid>
+    <RootNamespace>WeatherStationDuoPtrTests</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -110,9 +110,6 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
-    <PostBuildEvent>
-      <Command>$(TargetDir)WeatherStationDuoTests.exe</Command>
-    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -131,18 +128,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ProjectReference Include="..\WeatherStationDuo\WeatherStationDuo.vcxproj">
-      <Project>{36c45075-bd19-4f75-bb6d-32b867564242}</Project>
+    <ProjectReference Include="..\WeatherStationDuoPtr\WeatherStationDuoPtr.vcxproj">
+      <Project>{a9b80a48-f40c-490b-8647-24ccb8c6267a}</Project>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LocationTestDisplay.cpp" />
-    <ClCompile Include="MockDisplay.cpp" />
-    <ClCompile Include="WeatherStationDuoTests.cpp" />
+    <ClCompile Include="WeatherStationDuoPtrTests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LocationTestDisplay.h" />
-    <ClInclude Include="MockDisplay.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
