--- a/lab2/WeatherStationProDetailed/WeatherStationProDetailed.vcxproj.filters
+++ b/lab2/WeatherStationProDetailed/WeatherStationProDetailed.vcxproj.filters
@@ -21,10 +21,7 @@
     <ClInclude Include="Dependents\Dependents.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="WeatherData\Displays\Tools\AngleTransform.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="WeatherData\Displays\Display.h">
+    <ClInclude Include="WeatherData\WeatherData.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="WeatherData\Displays\StatisticsDisplay.h">
@@ -36,7 +33,19 @@
     <ClInclude Include="WeatherData\Displays\StatisticsDisplayComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="WeatherData\WeatherData.h">
+    <ClInclude Include="WeatherData\Display\Tools\AngleTransform.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WeatherData\Display\Display.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WeatherData\Display\StatisticsDisplay.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WeatherData\Display\StatisticsDisplayAngleComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WeatherData\Display\StatisticsDisplayComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -44,10 +53,7 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="WeatherData\Displays\Tools\AngleTransform.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="WeatherData\Displays\Display.cpp">
+    <ClCompile Include="WeatherData\WeatherData.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="WeatherData\Displays\StatisticsDisplay.cpp">
@@ -59,7 +65,19 @@
     <ClCompile Include="WeatherData\Displays\StatisticsDisplayComponent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="WeatherData\WeatherData.cpp">
+    <ClCompile Include="WeatherData\Display\Tools\AngleTransform.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WeatherData\Display\Display.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WeatherData\Display\StatisticsDisplay.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WeatherData\Display\StatisticsDisplayAngleComponent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WeatherData\Display\StatisticsDisplayComponent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
