[lab2-7] major release

--- a/lab2/WeatherStationProPubSub/WeatherStationProPubSub.vcxproj
+++ b/lab2/WeatherStationProPubSub/WeatherStationProPubSub.vcxproj
@@ -147,6 +147,8 @@
     <ClInclude Include="WeatherData\Display\StatisticsDisplayAngleComponent.h" />
     <ClInclude Include="WeatherData\Display\StatisticsDisplayComponent.h" />
     <ClInclude Include="WeatherData\Display\Tools\AngleTransform.h" />
+    <ClInclude Include="WeatherData\Handlers\Handlers.h" />
+    <ClInclude Include="WeatherData\Handlers\StatisticsHandlers.h" />
     <ClInclude Include="WeatherData\WeatherData.h" />
   </ItemGroup>
   <ItemGroup>
