--- a/lab3/DataStreams/DataStreams.vcxproj.filters
+++ b/lab3/DataStreams/DataStreams.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="InputStreams\MemoryInputStream.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="OutputStreams\MemoryOutputStream.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -45,6 +48,9 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="InputStreams\MemoryInputStream.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="OutputStreams\MemoryOutputStream.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
